--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve frontend && nx serve api",
+    "start": "nx serve api && nx serve frontend",
     "test": "nx test frontend",
     "lint": "nx lint frontend",
     "build": "nx build frontend",
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@nrwl/web": "^15.6.3",
     "axios": "^1.0.0",
     "express": "^4.18.1",
     "react": "18.2.0",
